<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddContact">

    <EditText
        android:id="@+id/etContactName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/etContactName_hint"
        android:inputType="textPersonName"
        android:visibility="visible"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/etContactPhoneNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/etContactPhoneNo_hint"
        android:inputType="phone"
        android:visibility="visible"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/etContactAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/etContactAddress_hint"
        android:inputType="textPersonName"
        android:visibility="visible"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/etContactWebAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/etContactWebAddress_hint"
        android:inputType="textPersonName"
        android:visibility="visible"
        tools:visibility="visible" />

    <Button
        android:id="@+id/buttonSubmitContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/buttonSubmitContact_text" />
</LinearLayout>