<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/lightBrown"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:scrollIndicators="top"
    android:scrollbarSize="40dp"
    android:scrollbarStyle="insideOverlay"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageThermometer"
        android:layout_width="90dp"
        android:layout_height="130dp"
        app:srcCompat="@drawable/thermometer" />

    <EditText
        android:id="@+id/etNoOfChirps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/etNoOfChirps_hint"
        android:inputType="number"
        android:minHeight="48dp"
        android:textAlignment="center" />

    <Button
        android:id="@+id/buttonNoOfChirps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="2dp"
        android:minHeight="48dp"
        android:text="@string/buttonNoOfChirps_text"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/tvDescription_text"
        android:textColor="@color/purple_700"
        android:textSize="6pt"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvTemperatureResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/tvTemperatureResult_text"
        android:textAlignment="center"
        android:textColor="@color/teal_700"
        android:textSize="10pt"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@color/lightBrown"
        android:gravity="center_horizontal"
        android:scrollIndicators="top"
        android:scrollbarSize="40dp"
        android:scrollbarStyle="insideOverlay"
        android:textAlignment="center">

        <Button
            android:id="@+id/buttonPlayTicTacToe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="6dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp"
            android:minHeight="48dp"
            android:text="@string/buttonChangeLayout_text"
            android:textAlignment="center" />

        <Button
            android:id="@+id/buttonSesnorList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="6dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp"
            android:minHeight="48dp"
            android:text="@string/buttonSesnorList_text"
            android:textAlignment="center" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonAddContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_weight="1"
            android:text="@string/buttonAddContact_contentDescriptor"
            android:visibility="visible"
            tools:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/contactTools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/buttonSaveContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="visible"
            app:srcCompat="@drawable/ic_baseline_contacts_24"
            tools:visibility="visible" />

        <ImageButton
            android:id="@+id/buttonPlaceCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="visible"
            app:srcCompat="@drawable/ic_baseline_add_ic_call_24"
            tools:visibility="visible" />

        <ImageButton
            android:id="@+id/buttonOpenAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_baseline_map_24" />

        <ImageButton
            android:id="@+id/buttonOpenWebAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_baseline_open_in_browser_24" />

    </LinearLayout>

</LinearLayout>